group 'ru.spbau.mit'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '5'
    compile group: 'com.beust', name: 'jcommander', version: '1.72'
    compile group: 'commons-io', name: 'commons-io', version: '2.5'
}
